--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="main">
 	<!-- HEADER -->
 	<div class="main-slider">
-		<header class="header" id="header" style="background: #07060c url(../img/intro-bg.jpg) center center/cover no-repeat;"> 
+		<header class="header" id="header" style="background: #07060c url(https://raw.githubusercontent.com/Arthur410/gamego/master/img/intro-bg.jpg) center center/cover no-repeat;"> 
 			<div class="header-top">
 				<div class="container">
 					<div class="row">
@@ -66,7 +66,7 @@
 				</div>
 			</div>
 		</header>
-		<header class="header" id="header" style="background: #07060c url(../img/intro-second.jpg) center center/cover no-repeat;">
+		<header class="header" id="header" style="background: #07060c url(https://raw.githubusercontent.com/Arthur410/gamego/master/img/intro-second.jpg) center center/cover no-repeat;">
 			<div class="header-top">
 				<div class="container">
 					<div class="row">
@@ -118,7 +118,7 @@
 				</div>
 			</div>
 		</header>
-		<header class="header" id="header" style="background: #07060c url(../img/intro3.jpg) center center/cover no-repeat;">
+		<header class="header" id="header" style="background: #07060c url(https://raw.githubusercontent.com/Arthur410/gamego/master/img/intro3.jpg) center center/cover no-repeat;">
 			<div class="header-top">
 				<div class="container">
 					<div class="row">
@@ -170,7 +170,7 @@
 				</div>
 			</div>
 		</header>
-		<header class="header" id="header" style="background: #07060c url(../img/intro4.jpg) bottom/cover no-repeat;">
+		<header class="header" id="header" style="background: #07060c url(https://raw.githubusercontent.com/Arthur410/gamego/master/img/intro4.jpg) bottom/cover no-repeat;">
 			<div class="header-top">
 				<div class="container">
 					<div class="row">
@@ -222,7 +222,7 @@
 				</div>
 			</div>
 		</header>
-		<header class="header" id="header" style="background: #07060c url(../img/intro5.jpg) center center/cover no-repeat;">
+		<header class="header" id="header" style="background: #07060c url(https://raw.githubusercontent.com/Arthur410/gamego/master/img/intro5.jpg) center center/cover no-repeat;">
 			<div class="header-top">
 				<div class="container">
 					<div class="row">
